feat: get my chats
